# telemetry-serializers

./: CMakeLists.txt  LICENSE  serializers.h  serializers_py.py
.github/workflows/: dev_generation.yaml  dry_generation.yaml  generation.yaml
inc/: app_config.h  bar.h  foo.h
inc/actions/: command.h  file_transaction.h
inc/app/: app_config.h  app_data.h  custom_preset.h  data_processing.h  user_data.h
inc/can/: can_error.h  can_frequencies.h  can_networks.h
inc/configs/: car_config.h  forwarder_config.h  session_config.h  telemetry_config.h
inc/data/: as_commands.h  dv_commands.h  extra.h  steer_command.h  telemetry_lap_data.h  vehicle_state.h
inc/handcart/: settings.h
inc/influxlogger/: configuration.h
inc/lapcounter/: circuit.h  lap_counter.h  lapcounter.h  laps.h  new_lap.h  race.h
inc/mongodb/: lapcounter_lap_records.h  lapcounter_lap_times.h  lapcounter_layout.h
inc/sessions/: gpsSession.h
inc/telemetry/: baseline.h  can_error.h  csv_parser_config.h  error.h  gps_maps.h  kilometers_counter.h  login_data.h  odometer.h  statistics.h  status.h  wait_ready.h
inc/tpms/: rtl433_payload.h
proto/actions/: command.proto  file_transaction.proto
proto/app/: app_config.proto  app_data.proto  custom_preset.proto  data_processing.proto  user_data.proto
proto/can/: can_error.proto  can_frequencies.proto  can_networks.proto
proto/configs/: car_config.proto  forwarder_config.proto  session_config.proto  telemetry_config.proto
proto/data/: as_commands.proto  dv_commands.proto  extra.proto  steer_command.proto  telemetry_lap_data.proto  vehicle_state.proto
proto/handcart/: settings.proto
proto/influxlogger/: configuration.proto
proto/lapcounter/: circuit.proto  lap_counter.proto  lapcounter.proto  laps.proto  new_lap.proto  race.proto
proto/mongodb/: lapcounter_lap_records.proto  lapcounter_lap_times.proto  lapcounter_layout.proto
proto/sessions/: gpsSession.proto
proto/telemetry/: baseline.proto  can_error.proto  error.proto  gps_maps.proto  kilometers_counter.proto  login_data.proto  odometer.proto  statistics.proto  status.proto  wait_ready.proto
proto/tpms/: rtl433_payload.proto
py/: __init__.py
py/actions/: command.py  file_transaction.py
py/app/: app_config.py  app_data.py  custom_preset.py  data_processing.py  user_data.py
py/can/: can_error.py  can_frequencies.py
py/configs/: car_config.py  forwarder_config.py  session_config.py  telemetry_config.py
py/data/: as_commands.py  dv_commands.py  extra.py  steer_command.py  telemetry_lap_data.py  vehicle_state.py
py/handcart/: settings.py
py/influxlogger/: configuration.py
py/lapcounter/: lap_counter.py  lapcounter.py  new_lap.py
py/mongodb/: lapcounter_lap_records.py  lapcounter_lap_times.py  lapcounter_layout.py
py/sessions/: gpsSession.py
py/telemetry/: can_error.py  error.py  gps_maps.py  login_data.py  odometer.py  statistics.py  status.py  wait_ready.py
py/tpms/: rtl433_payload.py
schemas/: ASCommands.schema.json  ASStatus.schema.json  ActuatorsCommands.schema.json  ActuatorsStatus.schema.json  AnotherSmallMessage.schema.json  AppConfig.schema.json  AppData.schema.json  Axis.schema.json  AxisItem.schema.json  Baseline.schema.json  BitTrigger.schema.json  Camera.schema.json  CanFrequencies.schema.json  CanFrequency.schema.json  CanNetworksFrequencies.schema.json  CarConfig.schema.json  Circuit.schema.json  Command.schema.json  Config.schema.json  Configuration.schema.json  Connection.schema.json  ConnectionPair.schema.json  ConnectionRepeated.schema.json  CustomPage.schema.json  CustomPlot.schema.json  CustomPlotAxis.schema.json  CustomPlotItem.schema.json  CustomPlotsTab.schema.json  CustomSubPlots.schema.json  Damper.schema.json  DataBase.schema.json  DataFile.schema.json  DataProcessing.schema.json  Devices.schema.json  DevicesPair.schema.json  DoubleTrigger.schema.json  Driver.schema.json  DriverRecord.schema.json  EnumTrigger.schema.json  Error.schema.json  (+67 more)
src/: app_config.cpp  bar.cpp  foo.cpp
src/actions/: command.cpp  file_transaction.cpp
src/app/: app_config.cpp  app_data.cpp  custom_preset.cpp  data_processing.cpp  user_data.cpp
src/can/: can_error.cpp  can_frequencies.cpp  can_networks.cpp
src/configs/: car_config.cpp  forwarder_config.cpp  session_config.cpp  telemetry_config.cpp
telemetry/: bar.proto
(+30 files in other folders)
